[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutagene"
version = "0.9.2.0"
description = "Mutational analysis with Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Public Domain"}
authors = [
    {name = "Alexander Goncearenco", email = "alexandr.goncearenco@nih.gov"}
]
keywords = ["bioinformatics", "cancer", "mutations"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: Public Domain",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Environment :: Console"
]

dependencies = [
    "bayesian-optimization>=1.4.0",
    "clustergrammer>=1.13.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "pyvcf3>=1.0.0",
    "twobitreader>=3.1.7",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0"
]

[project.urls]
Homepage = "http://www.ncbi.nlm.nih.gov/projects/mutagene/"
Repository = "https://github.com/neksa/mutagene"

[project.scripts]
mutagene = "mutagene.__main__:main"

[tool.setuptools]
packages = {find = {exclude = ["tests*", "docs*", "contrib*"]}}

[tool.setuptools.package-data]
mutagene = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=mutagene --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "black>=24.8.0",
    "coverage>=7.6.1",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.4",
]
