[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutagene"
version = "1.0.0"
description = "Mutational analysis with Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Public Domain"}
authors = [
    {name = "Alexander Goncearenco", email = "alexandr.goncearenco@nih.gov"}
]
keywords = ["bioinformatics", "cancer", "mutations"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX",
    "License :: Public Domain",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Environment :: Console",
]

dependencies = [
    "bayesian-optimization>=1.4.0",
    "clustergrammer>=1.13.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.33.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "pyvcf3>=1.0.0",
    "twobitreader>=3.1.7",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
web = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.11.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "http://www.ncbi.nlm.nih.gov/projects/mutagene/"
Repository = "https://github.com/neksa/mutagene"

[project.scripts]
mutagene = "mutagene.__main__:main"

[tool.setuptools]
packages = {find = {exclude = ["tests*", "docs*", "contrib*"]}}

[tool.setuptools.package-data]
mutagene = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["venv*", ".*", "data"]
addopts = "-v --cov=mutagene --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
    "E501",  # Line too long - can be fixed incrementally
    "F403",  # Star imports - legacy code
    "F405",  # Star imports - legacy code
    "N802",  # Function naming - legacy test code
    "N803",  # Argument naming - scientific conventions (N_mutations, etc.)
    "N806",  # Variable naming - scientific conventions (W, H, SRMSE, etc.)
]

[tool.ruff.lint.per-file-ignores]
"mutagene/io/_export_cohort.py" = ["F821"]  # Legacy dead code with undefined DB refs
"mutagene/benchmark/benchmark.py" = ["F821"]  # N defined at module level in notebook-style code
"mutagene/io/protein_mutations_MAF.py" = ["N999"]  # Uppercase in module name is legacy convention

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "black>=24.8.0",
    "coverage>=7.6.1",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.4",
]
